sh2c/tests/fixtures/read_file_missing_error.stderr
cat: non_existent_file.txt: No such file or directory
Error in tests/fixtures/read_file_missing_error.sh2:2:1
Error in tests/fixtures/read_file_missing_error.sh2:2:1
