sh2c/tests/fixtures/read_file_missing_error.sh2
func main() {
# This should fail with exit status != 0
let ignored = read_file("non_existent_file.txt")


}
